# python-course-final

./: .gitignore  BUSINESS_LOGIC.md  DEMO.md  FUNCTIONALITY.md  README.md  TECHNOLOGIES.md  TECH_SLIDES.md  pyproject.toml
src/personal_assistant/: __init__.py  address_book.py  cli.py  commands.py  fields.py  notes.py  record.py  storage.py
